--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -6,7 +6,7 @@
 .footer-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  // justify-content: space-between;
 }
 
 .footer-list {
