--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,8 +1,10 @@
 /* Hero */
 .hero {
+
+  
   // position: relative;
   max-width: 1280px;
-  min-height: auto;
+  min-height: 680px;
   margin: 0 auto;
 
   background-color: #191c26;
