--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 
 // conponents
 @import "./components/button";
+@import "./components/mobile-menu";
 @import "./components/socials";
 @import "./components/slider/slider-modul";
 @import "./components/slide-top-btn";
