--- a/sass/base/_js-selectors.scss
+++ b/sass/base/_js-selectors.scss
@@ -3,6 +3,7 @@
 }
 
 .js-no-transparency {
+    @include transition(background-color);
     transition: background-color var(--slow-anim), backdrop-filter var(--slow-anim);
     background-color: rgba(16, 18, 27, 0.4);
     backdrop-filter: blur(10px);
