--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -1,6 +1,8 @@
 /* About us */
 .about__container {
   display: flex;
+  padding-left: 0;
+  padding-right: 0;
   // justify-content: space-between;
 }
 
@@ -8,11 +10,12 @@
   // width: 100%;
   display: none;
 
-  @media screen and (min-width:768px) and (max-width:1279px) {
-    width: 330px;
-  }
+  // @media screen and (min-width:768px) and (max-width:1279px) {
+  //   width: 330px;
+  // }
 
   @media screen and (min-width:768px) {
+    width: 330px;
     margin-right: 30px;
     display: flex;
     flex-direction: column;
@@ -20,11 +23,12 @@
     justify-content: space-between;
   }
   
-  @media screen and (min-width:1280px) {
+  @media screen and (min-width:1200px) {
+    width: 570px;
+    // margin-left: 55px;
     margin-right: 64px;
     flex-direction: row;
     align-items: flex-end;
-    
   }
 }
 
@@ -104,7 +108,7 @@
 }
 
 .about-wrapper .title {
-  @media screen and (min-width:767px) and (max-width:1279px) {
+  @media screen and (min-width:767px) and (max-width:1199px) {
     margin-bottom: 20px;
     font-weight: 700;
     font-size: 28px;
